--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "keywords": [],
   "author": {
     "name" : "hookssi",
-    "email" : "sounghoo12@gmail.com",
+    "email" : "sounghoo12@gmail.com"
   },
   "license": "MIT",
   "bugs": {
