feat(added semantic-release): i added semantic-release
I addded semantic-release but I'm not sure about it

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,8 @@ jobs:
       
       - name: Run tests
         run: build/bin/shape_test
+
+      - name: Release
+        env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run semantic-release
