--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "lib": "lib",
     "test": "tests"
   },
+  "private": true,
+  "filse":[
+    "CHANGELOG.md",
+    "package.json",
+    "package-lock.json"
+  ],
   "scripts": {
     "semantic-release": "semantic-release",
     "commit": "git cz"
@@ -28,7 +34,12 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^6.0.0",
     "semantic-release": "^17.4.3"
