--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "hookssi_template",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "[![C++ build](https://github.com/hookSSi/hookssi_template/actions/workflows/main.yml/badge.svg)](https://github.com/hookSSi/hookssi_template/actions/workflows/main.yml)",
-  "main": "index.js",
   "directories": {
     "doc": "docs",
     "lib": "lib",
     "test": "tests"
   },
+  "private": true,
+  "filse":[
+    "CHANGELOG.md",
+    "package.json",
+    "package-lock.json"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "semantic-release": "semantic-release",
+    "commit": "git cz"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hookSSi/hookssi_template.git"
+    "url": "https://github.com/hookSSi/hookssi_template.git"
   },
   "keywords": [],
   "author": {
@@ -28,17 +34,19 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "semantic-release": "^17.4.3"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   }
 }
