--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "package-lock.json"
   ],
   "scripts": {
+    "prepare": "husky install",
     "semantic-release": "semantic-release",
     "commit": "git cz"
   },
